outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_21-21-05/evaluations/problem_eval8197090017533921197_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores, dynamic distance normalization, and a probabilistic selection mechanism that balances exploitation (minimizing immediate distances) with exploration (prioritizing less visited nodes), while using a novel scoring equation that combines normalized distances with a penalty for revisits and an exploration bonus to guide the path construction.}
                                                                                                                                                                                                                                                                                                                                                                           ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores, dynamic distance normalization, and a probabilistic selection mechanism that balances exploitation (minimizing immediate distances) with exploration (prioritizing less visited nodes), while using a novel scoring equation that combines normalized distances with a penalty for revisits and an exploration bonus to guide the path construction.}
                                                                                                                                                                                                                                                                                                                                                                           ^
SyntaxError: unmatched '}'
